--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
-      <div class="header-header-container header-container">
-        <div class="header-logo-header-container">
+      <div class="container">
+        <div class="header-logo">
           <a class="logo-link" href="./index.html"
             ><svg class="logo" width="100" height="16">
               <use href="/img/icons.svg#icon-logo"></use></svg
