--- a/src/css/bestsellers.css
+++ b/src/css/bestsellers.css
@@ -4,6 +4,9 @@
 .bestsellers-container {
   margin-bottom: 64px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .bestsellers-title {
   font-size: 28px;
@@ -38,13 +41,13 @@
   width: 343px;
 }
 
-.bestsellers-list-wrap {
+.bestsellers-list {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 30px;
-}
-.bestsellers-list {
+  margin: 0;
+  padding: 0;
 }
 
 .bestsellers-little_image {
@@ -97,21 +100,23 @@
   .bestsellers-item:nth-child(n + 3) {
     display: block;
   }
-  .bestsellers-list-wrap {
+
+  .bestsellers-list {
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 32px;
-
+  }
+  .bestsellers-item {
     width: calc((100% - 32px) / 2);
   }
 }
 
 @media screen and (min-width: 1440px) {
   .bestsellers-container {
-    max-width: 1096px;
-    /*min-width: 1440px;
+    min-width: 1440px;
     padding-left: 172px;
-    padding-right: 172px;*/
+    padding-right: 172px;
   }
   .bestsellers-images-wrap {
     flex-direction: row;
@@ -123,6 +128,8 @@
   }
   .bestsellers-list-wrap {
     gap: 30px 20px;
+  }
+  .bestsellers-item {
     width: calc((100% - 20px) / 2);
   }
 }
