--- a/src/partials/bestsellers.html
+++ b/src/partials/bestsellers.html
@@ -29,7 +29,7 @@
             class="bestsellers-big_image"
             src="./img/bestsellers/bed-1x-desk.jpg"
             alt="Modern bed"
-            width="343px"
+            width="343"
           />
         </picture>
 
@@ -37,163 +37,161 @@
         <p class="bestsellers-big_image-text">750$</p>
       </div>
 
-      <div class="bestsellers-list-wrap">
-        <ul class="bestsellers-list">
-          <li class="bestsellers-item">
-            <div class="bestsellers-little_image-wrap">
-              <picture>
-                <source
-                  srcset="
-                    ./img/bestsellers/chairs-1x-desk.jpg 1x,
-                    ./img/bestsellers/chairs-2x-desk.jpg 2x
-                  "
-                  media="(min-width:1440px)"
-                />
-                <source
-                  srcset="
-                    ./img/bestsellers/chairs-1x-tab.jpg 1x,
-                    ./img/bestsellers/chairs-2x-tab.jpg 2x
-                  "
-                  media="(min-width:768px)"
-                />
-                <source
-                  srcset="
-                    ./img/bestsellers/chairs-1x-mob.jpg 1x,
-                    ./img/bestsellers/chairs-2x-mob.jpg 2x
-                  "
-                  media="(min-width:320px)"
-                />
-                <img
-                  class="bestsellers-little_image"
-                  src="./img/bestsellers/chairs-1x-desk.jpg"
-                  alt="Lounge chairs"
-                  width="343px"
-                />
-              </picture>
+      <ul class="bestsellers-list">
+        <li class="bestsellers-item">
+          <div class="bestsellers-little_image-wrap">
+            <picture>
+              <source
+                srcset="
+                  ./img/bestsellers/chairs-1x-desk.jpg 1x,
+                  ./img/bestsellers/chairs-2x-desk.jpg 2x
+                "
+                media="(min-width:1440px)"
+              />
+              <source
+                srcset="
+                  ./img/bestsellers/chairs-1x-tab.jpg 1x,
+                  ./img/bestsellers/chairs-2x-tab.jpg 2x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/bestsellers/chairs-1x-mob.jpg 1x,
+                  ./img/bestsellers/chairs-2x-mob.jpg 2x
+                "
+                media="(min-width:320px)"
+              />
+              <img
+                class="bestsellers-little_image"
+                src="./img/bestsellers/chairs-1x-desk.jpg"
+                alt="Lounge chairs"
+                width="343"
+              />
+            </picture>
 
-              <h3 class="bestsellers-little_image-subtitle">
-                The Cozy Lounge Chair
-              </h3>
-              <p class="bestsellers-little_image-text">230$</p>
-            </div>
-          </li>
+            <h3 class="bestsellers-little_image-subtitle">
+              The Cozy Lounge Chair
+            </h3>
+            <p class="bestsellers-little_image-text">230$</p>
+          </div>
+        </li>
 
-          <li class="bestsellers-item">
-            <div class="bestsellers-little_image-wrap">
-              <picture>
-                <source
-                  srcset="
-                    ./img/bestsellers/ind_chair-1x-desk.jpg 1x,
-                    ./img/bestsellers/ind_chair-2x-desk.jpg 2x
-                  "
-                  media="(min-width:1440px)"
-                />
-                <source
-                  srcset="
-                    ./img/bestsellers/ind_chair-1x-tab.jpg 1x,
-                    ./img/bestsellers/ind_chair-2x-tab.jpg 2x
-                  "
-                  media="(min-width:768px)"
-                />
-                <source
-                  srcset="
-                    ./img/bestsellers/ind_chair-1x-mob.jpg 1x,
-                    ./img/bestsellers/ind_chair-2x-mob.jpg 2x
-                  "
-                  media="(min-width:320px)"
-                />
-                <img
-                  class="bestsellers-little_image"
-                  src="./img/bestsellers/ind_chair-1x-desk.jpg"
-                  alt="Industrial chair"
-                  width="343px"
-                />
-              </picture>
+        <li class="bestsellers-item">
+          <div class="bestsellers-little_image-wrap">
+            <picture>
+              <source
+                srcset="
+                  ./img/bestsellers/ind_chair-1x-desk.jpg 1x,
+                  ./img/bestsellers/ind_chair-2x-desk.jpg 2x
+                "
+                media="(min-width:1440px)"
+              />
+              <source
+                srcset="
+                  ./img/bestsellers/ind_chair-1x-tab.jpg 1x,
+                  ./img/bestsellers/ind_chair-2x-tab.jpg 2x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/bestsellers/ind_chair-1x-mob.jpg 1x,
+                  ./img/bestsellers/ind_chair-2x-mob.jpg 2x
+                "
+                media="(min-width:320px)"
+              />
+              <img
+                class="bestsellers-little_image"
+                src="./img/bestsellers/ind_chair-1x-desk.jpg"
+                alt="Industrial chair"
+                width="343"
+              />
+            </picture>
 
-              <h3 class="bestsellers-little_image-subtitle">
-                The industrial accent chair
-              </h3>
-              <p class="bestsellers-little_image-text">250$</p>
-            </div>
-          </li>
+            <h3 class="bestsellers-little_image-subtitle">
+              The industrial accent chair
+            </h3>
+            <p class="bestsellers-little_image-text">250$</p>
+          </div>
+        </li>
 
-          <li class="bestsellers-item">
-            <div class="bestsellers-little_image-wrap">
-              <picture>
-                <source
-                  srcset="
-                    ./img/bestsellers/stand-1x-desk.jpg 1x,
-                    ./img/bestsellers/stand-2x-desk.jpg 2x
-                  "
-                  media="(min-width:1440px)"
-                />
-                <source
-                  srcset="
-                    ./img/bestsellers/stand-1x-tab.jpg 1x,
-                    ./img/bestsellers/stand-2x-tab.jpg 2x
-                  "
-                  media="(min-width:768px)"
-                />
-                <source
-                  srcset="
-                    ./img/bestsellers/stand-1x-mob.jpg 1x,
-                    ./img/bestsellers/stand-2x-mob.jpg 2x
-                  "
-                  media="(min-width:320px)"
-                />
-                <img
-                  class="bestsellers-little_image"
-                  src="./img/bestsellers/stand-1x-desk.jpg"
-                  alt="Sleek stand"
-                  width="343px"
-                />
-              </picture>
+        <li class="bestsellers-item">
+          <div class="bestsellers-little_image-wrap">
+            <picture>
+              <source
+                srcset="
+                  ./img/bestsellers/stand-1x-desk.jpg 1x,
+                  ./img/bestsellers/stand-2x-desk.jpg 2x
+                "
+                media="(min-width:1440px)"
+              />
+              <source
+                srcset="
+                  ./img/bestsellers/stand-1x-tab.jpg 1x,
+                  ./img/bestsellers/stand-2x-tab.jpg 2x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/bestsellers/stand-1x-mob.jpg 1x,
+                  ./img/bestsellers/stand-2x-mob.jpg 2x
+                "
+                media="(min-width:320px)"
+              />
+              <img
+                class="bestsellers-little_image"
+                src="./img/bestsellers/stand-1x-desk.jpg"
+                alt="Sleek stand"
+                width="343"
+              />
+            </picture>
 
-              <h3 class="bestsellers-little_image-subtitle">The sleek stand</h3>
-              <p class="bestsellers-little_image-text">300$</p>
-            </div>
-          </li>
+            <h3 class="bestsellers-little_image-subtitle">The sleek stand</h3>
+            <p class="bestsellers-little_image-text">300$</p>
+          </div>
+        </li>
 
-          <li class="bestsellers-item">
-            <div class="bestsellers-little_image-wrap">
-              <picture>
-                <source
-                  srcset="
-                    ./img/bestsellers/sofa-1x-desk.jpg 1x,
-                    ./img/bestsellers/sofa-2x-desk.jpg 2x
-                  "
-                  media="(min-width:1440px)"
-                />
-                <source
-                  srcset="
-                    ./img/bestsellers/sofa-1x-tab.jpg 1x,
-                    ./img/bestsellers/sofa-2x-tab.jpg 2x
-                  "
-                  media="(min-width:768px)"
-                />
-                <source
-                  srcset="
-                    ./img/bestsellers/sofa-1x-mob.jpg 1x,
-                    ./img/bestsellers/sofa-2x-mob.jpg 2x
-                  "
-                  media="(min-width:320px)"
-                />
-                <img
-                  class="bestsellers-little_image"
-                  src="./img/bestsellers/sofa-1x-desk.jpg"
-                  alt="Grey sofa"
-                  width="343px"
-                />
-              </picture>
+        <li class="bestsellers-item">
+          <div class="bestsellers-little_image-wrap">
+            <picture>
+              <source
+                srcset="
+                  ./img/bestsellers/sofa-1x-desk.jpg 1x,
+                  ./img/bestsellers/sofa-2x-desk.jpg 2x
+                "
+                media="(min-width:1440px)"
+              />
+              <source
+                srcset="
+                  ./img/bestsellers/sofa-1x-tab.jpg 1x,
+                  ./img/bestsellers/sofa-2x-tab.jpg 2x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/bestsellers/sofa-1x-mob.jpg 1x,
+                  ./img/bestsellers/sofa-2x-mob.jpg 2x
+                "
+                media="(min-width:320px)"
+              />
+              <img
+                class="bestsellers-little_image"
+                src="./img/bestsellers/sofa-1x-desk.jpg"
+                alt="Grey sofa"
+                width="343"
+              />
+            </picture>
 
-              <h3 class="bestsellers-little_image-subtitle">
-                The minimalist sofa
-              </h3>
-              <p class="bestsellers-little_image-text">650$</p>
-            </div>
-          </li>
-        </ul>
-      </div>
+            <h3 class="bestsellers-little_image-subtitle">
+              The minimalist sofa
+            </h3>
+            <p class="bestsellers-little_image-text">650$</p>
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
