--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -53,7 +53,7 @@
           "
           media="(min-width:320px)"
         />
-        <img src="../img/about-us/about-us-1x" alt="sofa" />
+        <img src="../img/about-us/about-us-1x" alt="sofa" width="704" />
       </picture>
     </div>
   </div>
