--- a/src/css/clients_reviews.css
+++ b/src/css/clients_reviews.css
@@ -1,5 +1,4 @@
 
-
 .clients {
   background-color: #f7faff;
   padding: 36px 0;
@@ -10,13 +9,14 @@
 }
 
 .clients-title {
-  max-width: 233px;
+  
   font-size: 28px;
   line-height: 1.5;
   text-transform: uppercase;
   color: #0a224a;
   margin: 0 auto;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .clients-list {
@@ -28,6 +28,7 @@
   background-color: #fff;
   max-width: 343px;
   padding: 24px;
+  border-radius: 8px;
 }
 
 .clients-item:not(:first-child) {
@@ -37,9 +38,13 @@
 .clients-subtitle {
   font-weight: 700;
   font-size: 18px;
-  line-height: 32px;
+  line-height: 1.77;
   text-transform: uppercase;
   color: #0a224a;
+}
+
+.clients-item-wrap {
+    padding: 24px;
 }
 
 .clients-pic {
@@ -55,9 +60,17 @@
   margin-left: 14px;
 }
 
+.clients-info {
+        font-size: 14px;
+        line-height: 1.3;
+        color: #0A224A;
+}
+
 .clients-bio {
+        font-size: 14px;
+        line-height: 1.4;
+        color: #0A224A;
   margin-top: 24px;
-  max-width: 280px;
 }
 /* 
 @media screen and (min-width: 375px) {
@@ -72,16 +85,16 @@
 @media screen and (min-width: 768px) {
   
 .container {
-    min-width: 768px;
+    max-width: 768px;
 }
 
 .clients-list {
     gap: 16px;
 }
 
-  /* .clients-item {
+  .clients-item {
     width: calc((100% - 16px) / 2);
-  } */
+  } 
 
 
   .clients-item:not(:first-child) {
