--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer-page">
-  <div class="ftr-container">
+  <div class="container ftr-container">
     <!-- Logo -->
     <div class="footer-logo-icons">
       <div class="ftr-logo">
