--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -24,7 +24,7 @@ span {
 
 .footer-page {
   background-color: var(--blue-font);
-  width: 375px;
+  /* width: 375px; */
   /* margin: 0 auto; */
   font-size: 16px;
 }
