--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -1,4 +1,4 @@
-<section class="about-us">
+<section id="about-us" class="about-us">
   <div class="container">
     <div class="about-us-content">
       <h3 class="about-us-title">About us</h3>
