--- a/src/partials/clients_reviews.html
+++ b/src/partials/clients_reviews.html
@@ -1,4 +1,4 @@
-<div class="container clients">
+<div id="clients_reviews" class="container clients">
     <section class="clients-section">
         <h2 class="clients-title">Clients reviews</h2>
         <ul class="clients-list">
