--- a/src/partials/our_products.html
+++ b/src/partials/our_products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section id="our_products" class="products">
   <div class="container">
     <h2 class="products-header">Our Products</h2>
     <ul class="products-list list">
