--- a/src/partials/bestsellers.html
+++ b/src/partials/bestsellers.html
@@ -1,4 +1,4 @@
-<section class="bestsellers section">
+<section id="bestsellers" class="bestsellers section">
   <div class="bestsellers-container container">
     <h2 class="bestsellers-title">Bestsellers</h2>
     <div class="bestsellers-images-wrap">
