add #sections in footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -53,7 +53,7 @@
     <ul class="ftr-nav-menu nav-text">
       <li class="list">
         <a
-          href="/src/partials/about_us.html"
+          href="#about_us"
           class="ftr-link-menu"
           rel="noopener norefferrer"
           target="_blank"
@@ -62,7 +62,7 @@
       </li>
       <li class="list">
         <a
-          href="/src/partials/our_products.html"
+          href="#our_products"
           class="ftr-link-menu"
           rel="noopener norefferrer"
           target="_blank"
@@ -71,7 +71,7 @@
       </li>
       <li class="list">
         <a
-          href="/src/partials/price.html"
+          href="#price"
           class="ftr-link-menu"
           rel="noopener norefferrer"
           target="_blank"
@@ -80,7 +80,7 @@
       </li>
       <li class="list">
         <a
-          href="/src/partials/bestsellers.html"
+          href="#bestsellers"
           class="ftr-link-menu"
           rel="noopener norefferrer"
           target="_blank"
@@ -89,7 +89,7 @@
       </li>
       <li class="list">
         <a
-          href="/src/partials/clients_reviews.html"
+          href="#clients_reviews"
           class="ftr-link-menu"
           rel="noopener norefferrer"
           target="_blank"
