add id in header links + id=contacts in section footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-page">
+<footer id="contacts" class="footer-page">
   <div class="container ftr-container">
     <!-- Logo -->
     <div class="footer-logo-icons">
