--- a/src/partials/clients_reviews.html
+++ b/src/partials/clients_reviews.html
@@ -1,5 +1,6 @@
-<div class="container clients">
-    <section class="clients-section">
+
+    <section class="clients">
+        <div class="container">
         <h2 class="clients-title">Clients reviews</h2>
         <ul class="clients-list">
             <li class="clients-item">
@@ -23,15 +24,13 @@
                     <img srcset="" class="clients-pic" src="/img/clients-reviews/clients-2.jpg" alt="Alexandra dream"
                         width="48" height="48" />
                     <div class="text-wrap">
-                        <h3 class="clients-subtitle">Alexandra dream</h3>
-                        <p class="clients-info">1 week ago</p>
+                        <h3 class="clients-subtitle">James Williams</h3>
+                        <p class="clients-info">A week ago</p>
                     </div>
                 </div>
                 <p class="clients-bio">
-                    I was blown away by the quality and craftsmanship of the furniture I
-                    received from this company. Each piece was unique and beautifully
-                    designed, and you can tell that a lot of thought and care goes into
-                    every detail.
+                    The "Minimal" furniture set is a fantastic addition to my home. It boasts a minimalist design, enhancing the feel and
+                    look of my living space. The sturdy construction is worth noting too, which speaks volumes about its durability.
                 </p>
             </li>
             <li class="clients-item">
@@ -39,18 +38,17 @@
                     <img srcset="" class="clients-pic" src="/img/clients-reviews/clients-3.jpg" alt="Alexandra dream"
                         width="48" height="48" />
                     <div class="text-wrap">
-                        <h3 class="clients-subtitle">Alexandra dream</h3>
-                        <p class="clients-info">1 week ago</p>
+                        <h3 class="clients-subtitle">Emily Watson</h3>
+                        <p class="clients-info">3 week ago</p>
                     </div>
                 </div>
                 <p class="clients-bio">
-                    I was blown away by the quality and craftsmanship of the furniture I
-                    received from this company. Each piece was unique and beautifully
-                    designed, and you can tell that a lot of thought and care goes into
-                    every detail.
+                    The "Minimal" furniture set has far exceeded my expectations. The sleek design combined with the high-quality materials
+                    have not only added an exceptional aesthetic to my space but also offered an uncompromising standard of comfort.
                 </p>
             </li>
         </ul>
+        </div>
     </section>
-</div>
+
 
