--- a/src/css/clients_reviews.css
+++ b/src/css/clients_reviews.css
@@ -1,10 +1,7 @@
-
 .clients {
   background-color: #f7faff;
   padding: 36px 0;
 }
-
-
 
 .clients-title {
   font-size: 28px;
@@ -17,7 +14,7 @@
 }
 
 .clients-list {
-    display: flex;
+  display: flex;
 }
 
 .clients-item {
@@ -40,8 +37,6 @@
   color: #0a224a;
 }
 
-
-
 .clients-pic {
   border-radius: 48px;
 }
@@ -56,15 +51,15 @@
 }
 
 .clients-info {
-        font-size: 14px;
-        line-height: 1.3;
-        color: #0A224A;
+  font-size: 14px;
+  line-height: 1.3;
+  color: #0a224a;
 }
 
 .clients-bio {
-        font-size: 14px;
-        line-height: 1.4;
-        color: #0A224A;
+  font-size: 14px;
+  line-height: 1.4;
+  color: #0a224a;
   margin-top: 24px;
 }
 /* 
@@ -74,31 +69,25 @@
   }
 } */
 
-
-
-
 @media screen and (min-width: 768px) {
-  
-.container {
+  .container {
     max-width: 768px;
-}
+  }
 
-.clients-title {
+  .clients-title {
     font-size: 32px;
     line-height: 1.4;
     text-transform: uppercase;
-    color: #0A224A;
-}
+    color: #0a224a;
+  }
 
-
-.clients-list {
+  .clients-list {
     gap: 16px;
-}
+  }
 
   .clients-item {
     width: calc((100% - 16px) / 2);
-  } 
-
+  }
 
   .clients-item:not(:first-child) {
     display: block;
@@ -108,59 +97,44 @@
     display: none;
   }
 
-.text-wrap {
-}
-
-  .clients-subtitle {
-      font-size: 20px;
-      line-height: 2.25;
-      text-transform: uppercase;
-      color: #0A224A;
+  .text-wrap {
   }
 
+  .clients-subtitle {
+    font-size: 20px;
+    line-height: 2.25;
+    text-transform: uppercase;
+    color: #0a224a;
+  }
 
-    .clients-info {
-  font-size: 16px;
-  line-height: 1.5;
-  color: #0A224A;
-    }
-  
-    .clients-bio {
-  font-size: 18px;
-  line-height: 1.5;
-  color: #0A224A;
-  margin-top: 14px;
-    }
+  .clients-info {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #0a224a;
+  }
 
-
-
-
-
-
+  .clients-bio {
+    font-size: 18px;
+    line-height: 1.5;
+    color: #0a224a;
+    margin-top: 14px;
+  }
 }
 
-
 @media screen and (min-width: 1440px) {
-  
   .clients {
-      padding: 60px 0;
-    }
+    padding: 60px 0;
+  }
 
-
-
-.clients-list {
+  .clients-list {
     gap: 24px;
   }
 
-
-.clients-item:not(:nth-child(-n + 2)) {
+  .clients-item:not(:nth-child(-n + 2)) {
     display: block;
   }
 
-    .clients-item {
-      width: calc((100% - 48px) / 3);
-    }
-
-
-
+  .clients-item {
+    width: calc((100% - 48px) / 3);
+  }
 }
