--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -56,45 +56,45 @@
           href="/src/partials/about_us.html"
           class="ftr-link-menu"
           rel="noopener norefferrer"
-          target="_blank"
-        ></a
-        >About us
+          target="_blank">
+          About us
+        </a>
       </li>
       <li class="list">
         <a
           href="/src/partials/our_products.html"
           class="ftr-link-menu"
           rel="noopener norefferrer"
-          target="_blank"
-        ></a
-        >Our products
+          target="_blank">
+          Our products
+        </a>
       </li>
       <li class="list">
         <a
           href="/src/partials/price.html"
           class="ftr-link-menu"
           rel="noopener norefferrer"
-          target="_blank"
-        ></a
-        >Prices
+          target="_blank">
+          Prices
+        </a>
       </li>
       <li class="list">
         <a
           href="/src/partials/bestsellers.html"
           class="ftr-link-menu"
           rel="noopener norefferrer"
-          target="_blank"
-        ></a
-        >Bestsellers
+          target="_blank">
+          Bestsellers
+        </a>
       </li>
       <li class="list">
         <a
           href="/src/partials/clients_reviews.html"
           class="ftr-link-menu"
           rel="noopener norefferrer"
-          target="_blank"
-        ></a
-        >Reviews
+          target="_blank">
+          Reviews
+        </a>
       </li>
     </ul>
 
@@ -104,9 +104,8 @@
         <li class="list">
           <a
             href="https://goo.gl/maps/otmeh9LYeM7hSeMd6"
-            class="link address-map"
-            >Obolonsky Prospect, 14, Kyiv</a
-          >
+            class="link address-map">
+            Obolonsky Prospect, 14, Kyiv</a>
         </li>
         <li class="list">Daily 10:00-21:00</li>
       </ul>
