--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -119,7 +119,7 @@
           <a href="tel:+380679384758">+380679384758</a>
         </li>
         <li class="footer-email list">
-          <a href="minimal.furniture@gmail.com">minimal.furniture@gmail.com</a>
+          <a href="mailto:minimal.furniture@gmail.com">minimal.furniture@gmail.com</a>
         </li>
       </ul>
     </div>
