--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
     <div class="footer-logo-icons">
       <div class="ftr-logo">
         <span
-          ><a href="" class="media-icons"></a>
+          ><a href="/src/index.html" class="media-icons"></a>
           <svg class="ftr-media" width="100" height="16">
             <use href="./img/icons.svg#icon-logo"></use>
           </svg>
