--- a/src/partials/clients_reviews.html
+++ b/src/partials/clients_reviews.html
@@ -5,7 +5,7 @@
       <li class="clients-item">
         <div class="info-wrap">
           <img
-            srcset="/img/clients-reviews/clients.jpg 1x, ../img/clients-reviews/clients-reviews-2x 2x"
+            srcset="/img/clients-reviews/clients.jpg 1x, ../img/clients-reviews/clients-reviews-2x.jpg 2x"
             class="clients-pic"
             src="/img/clients-reviews/clients.jpg"
             alt="Alexandra dream"
@@ -27,10 +27,10 @@
       <li class="clients-item">
         <div class="info-wrap">
           <img
-            srcset="/img/clients-reviews/clients-2.jpg 1x, /img/clients-reviews/clients-reviews-2-2x 2x"
+            srcset="./img/clients-reviews/clients-2.jpg 1x, /img/clients-reviews/clients-reviews-2-2x.jpg 2x"
             class="clients-pic"
             src="/img/clients-reviews/clients-2.jpg"
-            alt="Alexandra dream"
+            alt="James Williams"
             width="48"
             height="48"
           />
@@ -49,10 +49,10 @@
       <li class="clients-item">
         <div class="info-wrap">
           <img
-            srcset="/img/clients-reviews/clients-3.jpg 1x, ../img/clients-reviews/clients-reviews-3-2x 2x"
+            srcset="/img/clients-reviews/clients-3.jpg 1x, ../img/clients-reviews/clients-reviews-3-2x.jpg 2x"
             class="clients-pic"
             src="/img/clients-reviews/clients-3.jpg"
-            alt="Alexandra dream"
+            alt="Emily Watson"
             width="48"
             height="48"
           />
