--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,7 @@
-<footer>
+<footer id="contacts" class="ftr-page">
     <div class="container ftr-container">
         <div class="logo-ftr-icons">
             <!-- logo -->
-        <div class="footer-logo-icons">
             <div class="ftr-logo">
               <span
                 ><a href="/src/index.html" class="media-icons"></a>
@@ -11,42 +10,42 @@
                 </svg>
               </span>
             </div>
-        <!-- icons -->
-        <ul class="ftr-media-list">
-            <li class="list media-icons">
-              <a
-                href=""
-                aria-label="Facebook"
-                rel="noopener norefferrer"
-                target="https://www.facebook.com/"
-              ></a>
-              <svg class="ftr-media" width="28" height="28">
-                <use href="./img/icons.svg#fb"></use>
-              </svg>
-            </li>
-            <li class="list media-icons">
-              <a
-                href=""
-                aria-label="Instagram"
-                rel="noopener norefferrer"
-                target="https://www.instagram.com/"
-              ></a>
-              <svg class="ftr-media" width="28" height="28">
-                <use href="./img/icons.svg#inst"></use>
-              </svg>
-            </li>
-            <li class="list media-icons">
-              <a
-                href=""
-                aria-label="Youtube"
-                rel="noopener norefferrer"
-                target="https://www.youtube.com/"
-              ></a>
-              <svg class="ftr-media" width="28" height="28">
-                <use href="./img/icons.svg#youtube"></use>
-              </svg>
-            </li>
-          </ul>
+            <!-- icons -->
+            <ul class="ftr-media-list">
+                <li class="list media-icons">
+                <a
+                    href=""
+                    aria-label="Facebook"
+                    rel="noopener norefferrer"
+                    target="https://www.facebook.com/"
+                ></a>
+                <svg class="ftr-media" width="28" height="28">
+                    <use href="./img/icons.svg#fb"></use>
+                </svg>
+                </li>
+                <li class="list media-icons">
+                <a
+                    href=""
+                    aria-label="Instagram"
+                    rel="noopener norefferrer"
+                    target="https://www.instagram.com/"
+                ></a>
+                <svg class="ftr-media" width="28" height="28">
+                    <use href="./img/icons.svg#inst"></use>
+                </svg>
+                </li>
+                <li class="list media-icons">
+                <a
+                    href=""
+                    aria-label="Youtube"
+                    rel="noopener norefferrer"
+                    target="https://www.youtube.com/"
+                ></a>
+                <svg class="ftr-media" width="28" height="28">
+                    <use href="./img/icons.svg#youtube"></use>
+                </svg>
+                </li>
+            </ul>
         </div>
         <!-- nav -->
         <ul class="ftr-nav-menu nav-text">
@@ -102,7 +101,7 @@
               <li class="list">
                 <a
                   href="https://goo.gl/maps/otmeh9LYeM7hSeMd6"
-                  class="link address-map">
+                  class="link">
                   Obolonsky Prospect, 14, Kyiv</a>
               </li>
               <li class="list">Daily 10:00-21:00</li>
