--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -26,7 +26,7 @@ p {
 @media screen and (min-width: 768px) {
     .container {
         padding-top: 36px;
-        
+        width: 468px;
     }
 
     .ftr-container {
