--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -53,8 +53,7 @@
               <a
                 href="#about_us"
                 class="ftr-link-menu"
-                rel="noopener norefferrer"
-                target="_blank">
+                rel="noopener norefferrer">
                 About us
               </a>
             </li>
@@ -62,8 +61,7 @@
               <a
                 href="#our_products"
                 class="ftr-link-menu"
-                rel="noopener norefferrer"
-                target="_blank">
+                rel="noopener norefferrer">
                 Our products
               </a>
             </li>
@@ -71,8 +69,7 @@
               <a
                 href="#price"
                 class="ftr-link-menu"
-                rel="noopener norefferrer"
-                target="_blank">
+                rel="noopener norefferrer">
                 Prices
               </a>
             </li>
@@ -80,8 +77,7 @@
               <a
                 href="#bestsellers"
                 class="ftr-link-menu"
-                rel="noopener norefferrer"
-                target="_blank">
+                rel="noopener norefferrer">
                 Bestsellers
               </a>
             </li>
