updated mobile links

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -54,22 +54,22 @@
         <div class="mob-menu is-hidden" data-menu>
           <ul class="mob-nav-list">
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#">About us</a>
+              <a class="mob-nav-link" href="#about_us">About us</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#">Our products</a>
+              <a class="mob-nav-link" href="#our_products">Our products</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#">Prices</a>
+              <a class="mob-nav-link" href="#prices">Prices</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#">Bestsellers</a>
+              <a class="mob-nav-link" href="#bestsellers">Bestsellers</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#">Reviews</a>
+              <a class="mob-nav-link" href="#reviews">Reviews</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#">Contacts</a>
+              <a class="mob-nav-link" href="#contacts">Contacts</a>
             </li>
           </ul>
         </div>
