--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -142,10 +142,33 @@ p {
     margin-bottom: 64px;
 }
 
+@media screen and (max-width: 767px) {
+    .footer-email {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .ftr-privacy-block {
+        bottom: 36px;
+        left: -50%;
+        /* transform: translateX(50%); */
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .ftr-privacy-block {
+        bottom: 36px;
+        left: -50%;
+        transform: translateX(50%);
+    }
+}
+
+
 .ftr-privacy-block {
-    bottom: 16px;
+    /* bottom: 16px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%); */
 }
 
 .ftr-privacy {
