--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
             <div class="ftr-logo">
               <span
                 ><a href="/src/index.html" class="media-icons"></a>
-                <svg class="ftr-media" width="100" height="16">
+                <svg class="ftr-logo-media" width="100" height="16">
                   <use href="./img/icons.svg#icon-logo"></use>
                 </svg>
               </span>
@@ -80,8 +80,7 @@
             <li class="list">
               <a
                 href="#reviews"
-                class="ftr-link-m"
-                target="_blank">
+                class="ftr-link-m">
                 Reviews
               </a>
             </li>
