--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -87,7 +87,7 @@
           </ul>
         <!-- address -->
         <div class="ftr-address">
-            <ul class="nav-text">
+            <ul class="nav-text ftr-address-text">
               <li class="list">
                 <a
                   href="https://goo.gl/maps/otmeh9LYeM7hSeMd6"
@@ -99,7 +99,7 @@
           </div>
         <!-- contacts -->
         <div class="ftr-contacts">
-            <ul class="nav-text">
+            <ul class="nav-text ftr-address-text">
               <li class="list"><a href="tel:+380669384758">+380669384758</a></li>
               <li class="list phone-order">
                 <a href="tel:+380679384758">+380679384758</a>
