--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -54,13 +54,13 @@ p {
     }
 }
 
-.ftr-page {
+/* .ftr-page {
     font-size: 16px;
     max-height: 462px;
-}
+} */
 
 .ftr-page .container {
-    height: 523px;
+    height: 462px;
 }
 
 .ftr-media-list {
@@ -125,8 +125,8 @@ p {
     text-align: center;
     font-size: 12px;
     font-weight: 400;
-    line-height: 1.16em;
-    letter-spacing: 0.099em;
+    line-height: 1.16;
+    letter-spacing: 0.099;
 }
 
 @media screen and (min-width: 768px) {
@@ -134,7 +134,8 @@ p {
         width: 616px;
         height: 20px;
         font-size: 16px;
-        line-height: 1.25em;
+        line-height: 1.25;
+        letter-spacing: 0,074em;
     }
 }
 
@@ -220,7 +221,7 @@ p {
     .ftr-privacy-block {
         position: absolute;
         height: 20px;
-        bottom: 36px;
+        bottom: 72px;
         left: -50%;
         transform: translateX(50%);
     }
@@ -250,5 +251,6 @@ p {
 @media screen and (min-width: 768px) {
     .ftr-privacy {
         width: 616px;
+
     }
 }
