--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -30,8 +30,11 @@ p {
     }
 }
 
-.ftr-page .container {
+.ftr-page {
     background-color: var(--blue-font);
+}
+
+.ftr-page .container {
     color: #fff;
     max-width: 375px;
     margin: 0 auto;
