--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -8,18 +8,6 @@
     fill: rgba(255, 255, 255, 1);
   }
 
-@media screen and (min-width: 768px) {
-    .ftr-media {
-        width: 40px;
-        height: 40px;
-    }
-
-    .ftr-logo-media{
-        width: 127px;
-        height: 16px;
-    }
-}
-
 .ftr-page .container {
     height: 523px;
 }
@@ -37,20 +25,6 @@
     position: relative;
 }
 
-@media screen and (min-width: 768px) {
-    .ftr-page .container {
-        max-width: 768px;
-        padding: 36px 32px;
-    }
-}
-
-@media screen and (min-width: 1440px) {
-    .ftr-page .container {
-        max-width: 1440px;
-        padding: 36px 60px;
-    }
-}
-
 .ftr-media-list {
     display: flex;
     gap: 16px;
@@ -63,18 +37,6 @@
     align-items: center;
     height: 28px;
     margin-bottom: 36px;
-}
-
-@media screen and (min-width: 768px) {
-    .logo-ftr-icons {
-        height: 40px;
-        align-items: center;
-    }
-
-    .ftr-contacts {
-        position: absolute;
-        top: 228px;
-    }
 }
 
 .nav-text {
@@ -92,17 +54,6 @@
     font-weight: 400;
     line-height: 1.16em;
     letter-spacing: 0.099em;
-    /* width: 343px;
-    height: 28px; */
-}
-
-@media screen and (min-width: 768px) {
-    .ftr-privacy-text {
-        width: 616px;
-        height: 20px;
-        font-size: 16px;
-        line-height: 1.25em;
-    }
 }
 
 .privacy-link {
@@ -117,36 +68,8 @@
     margin-bottom: 36px;
 }
 
-@media screen and (min-width: 768px) {
-    .ftr-nav-menu {
-        position: absolute;
-        top: 36px;
-        right: 248px;
-        font-size: 18px;
-        margin: unset;
-        padding: 6px;
-        gap: 16px;
-    }
-}
-
 .ftr-address {
     margin-bottom: 35px;
-}
-
-@media screen and (min-width: 768px) {
-    .ftr-address {
-        margin-bottom: unset;
-        position: absolute;
-        top: 96px;
-        left: 32px;
-        font-size: 19px;
-    }
-
-    .ftr-address-text {
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-    }
 }
 
 .ftr-address-data {
@@ -169,29 +92,140 @@
     }
 }
 
-@media screen and (min-width: 1440px) {
-    .ftr-privacy-block {
-        bottom: 36px;
-        left: -50%;
-        transform: translateX(50%);
-    }
+.ftr-privacy {
+    width: 343px;
 }
 
+/* 768 */
 @media screen and (min-width: 768px) {
+    
+    .ftr-media {
+    width: 40px;
+    height: 40px;
+}
+
+    .ftr-logo-media{
+    width: 127px;
+    height: 16px;
+}
+
+    .ftr-page .container {
+    max-width: 768px;
+    height: 462px;
+    padding: 36px 32px;
+}
+
+    .logo-ftr-icons {
+    height: 40px;
+    align-items: center;
+}
+
+.ftr-contacts {
+    position: absolute;
+    top: 228px;
+}
+
+    .ftr-privacy-text {
+    width: 616px;
+    height: 20px;
+    font-size: 16px;
+    line-height: 1.25em;
+}
+
+     .ftr-nav-menu {
+        position: absolute;
+        top: 36px;
+        right: 248px;
+        font-size: 18px;
+        margin: unset;
+        padding: 6px;
+        gap: 16px;
+    }
+
+    .ftr-address {
+        margin-bottom: unset;
+        position: absolute;
+        top: 96px;
+        left: 32px;
+        font-size: 19px;
+    }
+
+    .ftr-address-text {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+
     .ftr-privacy-block {
         position: absolute;
         bottom: 16px;
         left: 50%;
         transform: translateX(-50%);
     }
-}
 
-.ftr-privacy {
-    width: 343px;
-}
-
-@media screen and (min-width: 768px) {
-    .ftr-privacy {
+  .ftr-privacy {
         width: 616px;
     }
+
 }
+/* 768 */
+
+/* 1440 */
+@media screen and (min-width: 1440px) {
+ 
+.ftr-page .container {
+    max-width: 1440px;
+    height: 262px;
+    padding: 36px 60px;
+} 
+
+.ftr-address {
+ left: 60px;
+}
+
+.ftr-privacy-block {
+    bottom: 36px;
+    left: -50%;
+    transform: translateX(50%);
+}
+
+.ftr-nav-menu {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    left: 506px;
+    padding: 8px;
+}
+
+.nav-text {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.ftr-address-text {
+    font-size: 19px;
+}
+
+.ftr-contacts {
+    display: flex;
+    top: 103px;
+    left: 395px;
+    width: 481px;
+    height: 68px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px 82px;
+}
+
+.phone-order {
+    order: 2;
+}
+
+.ftr-media-list {
+    gap: 30px;
+}
+}
+
+
+
+/* 1440 */
