--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -87,7 +87,7 @@
           </ul>
         <!-- address -->
         <div class="ftr-address">
-            <ul class="nav-text ftr-address-text">
+            <ul class="nav-text address-map">
               <li class="list">
                 <a
                   href="https://goo.gl/maps/otmeh9LYeM7hSeMd6"
